@@ -19,39 +19,7 @@
 
 package org.codelibs.fesen.cluster.metadata;
 
-import static java.util.Collections.singletonMap;
-import static java.util.stream.Collectors.toList;
-import static org.codelibs.fesen.cluster.metadata.IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING;
-import static org.codelibs.fesen.cluster.metadata.IndexMetadata.INDEX_NUMBER_OF_SHARDS_SETTING;
-import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_AUTO_EXPAND_REPLICAS;
-import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_CREATION_DATE;
-import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_INDEX_UUID;
-import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_NUMBER_OF_REPLICAS;
-import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_NUMBER_OF_SHARDS;
-import static org.codelibs.fesen.cluster.metadata.MetadataCreateDataStreamService.validateTimestampFieldMapping;
-
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.nio.file.Path;
-import java.time.Instant;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.BiConsumer;
-import java.util.function.BiFunction;
-import java.util.function.Function;
-import java.util.function.Predicate;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
+import com.carrotsearch.hppc.cursors.ObjectObjectCursor;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -110,7 +78,38 @@ import org.codelibs.fesen.indices.SystemIndexDescriptor;
 import org.codelibs.fesen.indices.SystemIndices;
 import org.codelibs.fesen.threadpool.ThreadPool;
 
-import com.carrotsearch.hppc.cursors.ObjectObjectCursor;
+import java.io.IOException;
+import java.io.UnsupportedEncodingException;
+import java.nio.file.Path;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.BiConsumer;
+import java.util.function.BiFunction;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
+import static java.util.Collections.singletonMap;
+import static java.util.stream.Collectors.toList;
+import static org.codelibs.fesen.cluster.metadata.IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING;
+import static org.codelibs.fesen.cluster.metadata.IndexMetadata.INDEX_NUMBER_OF_SHARDS_SETTING;
+import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_AUTO_EXPAND_REPLICAS;
+import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_CREATION_DATE;
+import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_INDEX_UUID;
+import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_NUMBER_OF_REPLICAS;
+import static org.codelibs.fesen.cluster.metadata.IndexMetadata.SETTING_NUMBER_OF_SHARDS;
+import static org.codelibs.fesen.cluster.metadata.MetadataCreateDataStreamService.validateTimestampFieldMapping;
 
 /**
  * Service responsible for submitting create index requests
@@ -135,10 +134,19 @@ public class MetadataCreateIndexService {
     private final boolean forbidPrivateIndexSettings;
     private final Set<IndexSettingProvider> indexSettingProviders = new HashSet<>();
 
-    public MetadataCreateIndexService(final Settings settings, final ClusterService clusterService, final IndicesService indicesService,
-            final AllocationService allocationService, final AliasValidator aliasValidator, final ShardLimitValidator shardLimitValidator,
-            final Environment env, final IndexScopedSettings indexScopedSettings, final ThreadPool threadPool,
-            final NamedXContentRegistry xContentRegistry, final SystemIndices systemIndices, final boolean forbidPrivateIndexSettings) {
+    public MetadataCreateIndexService(
+        final Settings settings,
+        final ClusterService clusterService,
+        final IndicesService indicesService,
+        final AllocationService allocationService,
+        final AliasValidator aliasValidator,
+        final ShardLimitValidator shardLimitValidator,
+        final Environment env,
+        final IndexScopedSettings indexScopedSettings,
+        final ThreadPool threadPool,
+        final NamedXContentRegistry xContentRegistry,
+        final SystemIndices systemIndices,
+        final boolean forbidPrivateIndexSettings) {
         this.settings = settings;
         this.clusterService = clusterService;
         this.indicesService = indicesService;
@@ -198,16 +206,15 @@ public class MetadataCreateIndexService {
         if (index.charAt(0) == '.') {
             SystemIndexDescriptor matchingDescriptor = systemIndices.findMatchingDescriptor(index);
             if (matchingDescriptor != null) {
-                logger.trace("index [{}] is a system index because it matches index pattern [{}] with description [{}]", index,
-                        matchingDescriptor.getIndexPattern(), matchingDescriptor.getDescription());
+                logger.trace("index [{}] is a system index because it matches index pattern [{}] with description [{}]",
+                    index, matchingDescriptor.getIndexPattern(), matchingDescriptor.getDescription());
                 isSystem = true;
             } else if (isHidden) {
                 logger.trace("index [{}] is a hidden index", index);
             } else {
                 DEPRECATION_LOGGER.deprecate("index_name_starts_with_dot",
-                        "index name [{}] starts with a dot '.', in the next major version, index names "
-                                + "starting with a dot are reserved for hidden indices and system indices",
-                        index);
+                    "index name [{}] starts with a dot '.', in the next major version, index names " +
+                        "starting with a dot are reserved for hidden indices and system indices", index);
             }
         }
 
@@ -260,17 +267,17 @@ public class MetadataCreateIndexService {
      * @param listener the listener on which to send the index creation cluster state update response
      */
     public void createIndex(final CreateIndexClusterStateUpdateRequest request,
-            final ActionListener<CreateIndexClusterStateUpdateResponse> listener) {
+                            final ActionListener<CreateIndexClusterStateUpdateResponse> listener) {
         onlyCreateIndex(request, ActionListener.wrap(response -> {
             if (response.isAcknowledged()) {
-                activeShardsObserver.waitForActiveShards(new String[] { request.index() }, request.waitForActiveShards(),
-                        request.ackTimeout(), shardsAcknowledged -> {
-                            if (shardsAcknowledged == false) {
-                                logger.debug("[{}] index created, but the operation timed out while waiting for "
-                                        + "enough shards to be started.", request.index());
-                            }
-                            listener.onResponse(new CreateIndexClusterStateUpdateResponse(response.isAcknowledged(), shardsAcknowledged));
-                        }, listener::onFailure);
+                activeShardsObserver.waitForActiveShards(new String[]{request.index()}, request.waitForActiveShards(), request.ackTimeout(),
+                    shardsAcknowledged -> {
+                        if (shardsAcknowledged == false) {
+                            logger.debug("[{}] index created, but the operation timed out while waiting for " +
+                                             "enough shards to be started.", request.index());
+                        }
+                        listener.onResponse(new CreateIndexClusterStateUpdateResponse(response.isAcknowledged(), shardsAcknowledged));
+                    }, listener::onFailure);
             } else {
                 listener.onResponse(new CreateIndexClusterStateUpdateResponse(false, false));
             }
@@ -278,46 +285,46 @@ public class MetadataCreateIndexService {
     }
 
     private void onlyCreateIndex(final CreateIndexClusterStateUpdateRequest request,
-            final ActionListener<ClusterStateUpdateResponse> listener) {
+                                 final ActionListener<ClusterStateUpdateResponse> listener) {
         normalizeRequestSetting(request);
-        clusterService.submitStateUpdateTask("create-index [" + request.index() + "], cause [" + request.cause() + "]",
-                new AckedClusterStateUpdateTask<ClusterStateUpdateResponse>(Priority.URGENT, request, listener) {
-                    @Override
-                    protected ClusterStateUpdateResponse newResponse(boolean acknowledged) {
-                        return new ClusterStateUpdateResponse(acknowledged);
-                    }
+        clusterService.submitStateUpdateTask(
+            "create-index [" + request.index() + "], cause [" + request.cause() + "]",
+            new AckedClusterStateUpdateTask<ClusterStateUpdateResponse>(Priority.URGENT, request, listener) {
+                @Override
+                protected ClusterStateUpdateResponse newResponse(boolean acknowledged) {
+                    return new ClusterStateUpdateResponse(acknowledged);
+                }
 
-                    @Override
-                    public ClusterState execute(ClusterState currentState) throws Exception {
-                        return applyCreateIndexRequest(currentState, request, false);
-                    }
+                @Override
+                public ClusterState execute(ClusterState currentState) throws Exception {
+                    return applyCreateIndexRequest(currentState, request, false);
+                }
 
-                    @Override
-                    public void onFailure(String source, Exception e) {
-                        if (e instanceof ResourceAlreadyExistsException) {
-                            logger.trace(() -> new ParameterizedMessage("[{}] failed to create", request.index()), e);
-                        } else {
-                            logger.debug(() -> new ParameterizedMessage("[{}] failed to create", request.index()), e);
-                        }
-                        super.onFailure(source, e);
+                @Override
+                public void onFailure(String source, Exception e) {
+                    if (e instanceof ResourceAlreadyExistsException) {
+                        logger.trace(() -> new ParameterizedMessage("[{}] failed to create", request.index()), e);
+                    } else {
+                        logger.debug(() -> new ParameterizedMessage("[{}] failed to create", request.index()), e);
                     }
-                });
+                    super.onFailure(source, e);
+                }
+            });
     }
 
     private void normalizeRequestSetting(CreateIndexClusterStateUpdateRequest createIndexClusterStateRequest) {
         Settings.Builder updatedSettingsBuilder = Settings.builder();
         Settings build = updatedSettingsBuilder.put(createIndexClusterStateRequest.settings())
-                .normalizePrefix(IndexMetadata.INDEX_SETTING_PREFIX).build();
+            .normalizePrefix(IndexMetadata.INDEX_SETTING_PREFIX).build();
         indexScopedSettings.validate(build, true);
         createIndexClusterStateRequest.settings(build);
     }
-
     /**
      * Handles the cluster state transition to a version that reflects the {@link CreateIndexClusterStateUpdateRequest}.
      * All the requested changes are firstly validated before mutating the {@link ClusterState}.
      */
     public ClusterState applyCreateIndexRequest(ClusterState currentState, CreateIndexClusterStateUpdateRequest request, boolean silent,
-            BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer) throws Exception {
+                                                BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer) throws Exception {
 
         normalizeRequestSetting(request);
         logger.trace("executing IndexCreationTask for [{}] against cluster state version [{}]", request, currentState.version());
@@ -335,15 +342,14 @@ public class MetadataCreateIndexService {
             // Hidden indices apply templates slightly differently (ignoring wildcard '*'
             // templates), so we need to check to see if the request is creating a hidden index
             // prior to resolving which templates it matches
-            final Boolean isHiddenFromRequest = IndexMetadata.INDEX_HIDDEN_SETTING.exists(request.settings())
-                    ? IndexMetadata.INDEX_HIDDEN_SETTING.get(request.settings())
-                    : null;
+            final Boolean isHiddenFromRequest = IndexMetadata.INDEX_HIDDEN_SETTING.exists(request.settings()) ?
+                IndexMetadata.INDEX_HIDDEN_SETTING.get(request.settings()) : null;
 
             // The backing index may have a different name or prefix than the data stream name.
             final String name = request.dataStreamName() != null ? request.dataStreamName() : request.index();
             // Check to see if a v2 template matched
-            final String v2Template = MetadataIndexTemplateService.findV2Template(currentState.metadata(), name,
-                    isHiddenFromRequest == null ? false : isHiddenFromRequest);
+            final String v2Template = MetadataIndexTemplateService.findV2Template(currentState.metadata(),
+                name, isHiddenFromRequest == null ? false : isHiddenFromRequest);
 
             if (v2Template != null) {
                 // If a v2 template was found, it takes precedence over all v1 templates, so create
@@ -352,14 +358,13 @@ public class MetadataCreateIndexService {
             } else {
                 // A v2 template wasn't found, check the v1 templates, in the event no templates are
                 // found creation still works using the request's specified index settings
-                final List<IndexTemplateMetadata> v1Templates =
-                        MetadataIndexTemplateService.findV1Templates(currentState.metadata(), request.index(), isHiddenFromRequest);
+                final List<IndexTemplateMetadata> v1Templates = MetadataIndexTemplateService.findV1Templates(currentState.metadata(),
+                    request.index(), isHiddenFromRequest);
 
                 if (v1Templates.size() > 1) {
                     DEPRECATION_LOGGER.deprecate("index_template_multiple_match",
-                            "index [{}] matches multiple legacy templates [{}], composable templates will only match a single template",
-                            request.index(),
-                            v1Templates.stream().map(IndexTemplateMetadata::name).sorted().collect(Collectors.joining(", ")));
+                        "index [{}] matches multiple legacy templates [{}], composable templates will only match a single template",
+                        request.index(), v1Templates.stream().map(IndexTemplateMetadata::name).sorted().collect(Collectors.joining(", ")));
                 }
 
                 return applyCreateIndexRequestWithV1Templates(currentState, request, silent, v1Templates, metadataTransformer);
@@ -367,8 +372,8 @@ public class MetadataCreateIndexService {
         }
     }
 
-    public ClusterState applyCreateIndexRequest(ClusterState currentState, CreateIndexClusterStateUpdateRequest request, boolean silent)
-            throws Exception {
+    public ClusterState applyCreateIndexRequest(ClusterState currentState, CreateIndexClusterStateUpdateRequest request,
+                                                boolean silent) throws Exception {
         return applyCreateIndexRequest(currentState, request, silent, null);
     }
 
@@ -389,16 +394,22 @@ public class MetadataCreateIndexService {
      * @return a new cluster state with the index added
      */
     private ClusterState applyCreateIndexWithTemporaryService(final ClusterState currentState,
-            final CreateIndexClusterStateUpdateRequest request, final boolean silent, final IndexMetadata sourceMetadata,
-            final IndexMetadata temporaryIndexMeta, final List<Map<String, Map<String, Object>>> mappings,
-            final Function<IndexService, List<AliasMetadata>> aliasSupplier, final List<String> templatesApplied,
-            final BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer) throws Exception {
+                                                              final CreateIndexClusterStateUpdateRequest request,
+                                                              final boolean silent,
+                                                              final IndexMetadata sourceMetadata,
+                                                              final IndexMetadata temporaryIndexMeta,
+                                                              final List<Map<String, Map<String, Object>>> mappings,
+                                                              final Function<IndexService, List<AliasMetadata>> aliasSupplier,
+                                                              final List<String> templatesApplied,
+                                                              final BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer)
+                                                                                        throws Exception {
         // create the index here (on the master) to validate it can be created, as well as adding the mapping
-        return indicesService.<ClusterState, Exception> withTempIndexService(temporaryIndexMeta, indexService -> {
+        return indicesService.<ClusterState, Exception>withTempIndexService(temporaryIndexMeta, indexService -> {
             try {
                 updateIndexMappingsAndBuildSortOrder(indexService, request, mappings, sourceMetadata);
             } catch (Exception e) {
-                logger.log(silent ? Level.DEBUG : Level.INFO, "failed on parsing mappings on index creation [{}]", request.index(), e);
+                logger.log(silent ? Level.DEBUG : Level.INFO,
+                    "failed on parsing mappings on index creation [{}]", request.index(), e);
                 throw e;
             }
 
@@ -407,18 +418,18 @@ public class MetadataCreateIndexService {
             final IndexMetadata indexMetadata;
             try {
                 indexMetadata = buildIndexMetadata(request.index(), aliases, indexService.mapperService()::documentMapper,
-                        () -> indexService.mapperService().documentMapper(MapperService.DEFAULT_MAPPING), temporaryIndexMeta.getSettings(),
-                        temporaryIndexMeta.getRoutingNumShards(), sourceMetadata, temporaryIndexMeta.isSystem());
+                    () -> indexService.mapperService().documentMapper(MapperService.DEFAULT_MAPPING), temporaryIndexMeta.getSettings(),
+                    temporaryIndexMeta.getRoutingNumShards(), sourceMetadata, temporaryIndexMeta.isSystem());
             } catch (Exception e) {
                 logger.info("failed to build index metadata [{}]", request.index());
                 throw e;
             }
 
             logger.log(silent ? Level.DEBUG : Level.INFO, "[{}] creating index, cause [{}], templates {}, shards [{}]/[{}]",
-                    request.index(), request.cause(), templatesApplied, indexMetadata.getNumberOfShards(),
-                    indexMetadata.getNumberOfReplicas());
+                request.index(), request.cause(), templatesApplied, indexMetadata.getNumberOfShards(), indexMetadata.getNumberOfReplicas());
 
-            indexService.getIndexEventListener().beforeIndexAddedToCluster(indexMetadata.getIndex(), indexMetadata.getSettings());
+            indexService.getIndexEventListener().beforeIndexAddedToCluster(indexMetadata.getIndex(),
+                indexMetadata.getSettings());
             return clusterStateCreateIndex(currentState, request.blocks(), indexMetadata, allocationService::reroute, metadataTransformer);
         });
     }
@@ -427,8 +438,10 @@ public class MetadataCreateIndexService {
      * Given a state and index settings calculated after applying templates, validate metadata for
      * the new index, returning an {@link IndexMetadata} for the new index
      */
-    private IndexMetadata buildAndValidateTemporaryIndexMetadata(final ClusterState currentState, final Settings aggregatedIndexSettings,
-            final CreateIndexClusterStateUpdateRequest request, final int routingNumShards) {
+    private IndexMetadata buildAndValidateTemporaryIndexMetadata(final ClusterState currentState,
+                                                                 final Settings aggregatedIndexSettings,
+                                                                 final CreateIndexClusterStateUpdateRequest request,
+                                                                 final int routingNumShards) {
 
         final boolean isHiddenAfterTemplates = IndexMetadata.INDEX_HIDDEN_SETTING.get(aggregatedIndexSettings);
         final boolean isSystem = validateDotIndex(request.index(), isHiddenAfterTemplates);
@@ -451,73 +464,84 @@ public class MetadataCreateIndexService {
     }
 
     private ClusterState applyCreateIndexRequestWithV1Templates(final ClusterState currentState,
-            final CreateIndexClusterStateUpdateRequest request, final boolean silent, final List<IndexTemplateMetadata> templates,
-            final BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer) throws Exception {
+                                                                final CreateIndexClusterStateUpdateRequest request,
+                                                                final boolean silent,
+                                                                final List<IndexTemplateMetadata> templates,
+                                                                final BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer)
+                                                                                        throws Exception {
         logger.debug("applying create index request using legacy templates {}",
-                templates.stream().map(IndexTemplateMetadata::name).collect(Collectors.toList()));
+            templates.stream().map(IndexTemplateMetadata::name).collect(Collectors.toList()));
 
         final Map<String, Map<String, Object>> mappings = Collections.unmodifiableMap(parseV1Mappings(request.mappings(),
-                templates.stream().map(IndexTemplateMetadata::getMappings)
-                        // Converts the ImmutableOpenMap into a non-terrible HashMap
-                        .map(iom -> {
-                            Map<String, CompressedXContent> converted = new HashMap<>(iom.size());
-                            for (ObjectObjectCursor<String, CompressedXContent> cursor : iom) {
-                                converted.put(cursor.key, cursor.value);
-                            }
-                            return converted;
-                        }).collect(toList()),
-                xContentRegistry));
+            templates.stream().map(IndexTemplateMetadata::getMappings)
+                // Converts the ImmutableOpenMap into a non-terrible HashMap
+                .map(iom -> {
+                    Map<String, CompressedXContent> converted = new HashMap<>(iom.size());
+                    for (ObjectObjectCursor<String, CompressedXContent> cursor : iom) {
+                        converted.put(cursor.key, cursor.value);
+                    }
+                    return converted;
+                })
+                .collect(toList()),
+            xContentRegistry));
 
         final Settings aggregatedIndexSettings =
-                aggregateIndexSettings(currentState, request, MetadataIndexTemplateService.resolveSettings(templates), null, settings,
-                        indexScopedSettings, shardLimitValidator, indexSettingProviders);
+            aggregateIndexSettings(currentState, request, MetadataIndexTemplateService.resolveSettings(templates),
+                null, settings, indexScopedSettings, shardLimitValidator, indexSettingProviders);
         int routingNumShards = getIndexNumberOfRoutingShards(aggregatedIndexSettings, null);
         IndexMetadata tmpImd = buildAndValidateTemporaryIndexMetadata(currentState, aggregatedIndexSettings, request, routingNumShards);
 
         return applyCreateIndexWithTemporaryService(currentState, request, silent, null, tmpImd, Collections.singletonList(mappings),
-                indexService -> resolveAndValidateAliases(request.index(), request.aliases(),
-                        MetadataIndexTemplateService.resolveAliases(templates), currentState.metadata(), aliasValidator,
-                        // the context is only used for validation so it's fine to pass fake values for the
-                        // shard id and the current timestamp
-                        xContentRegistry, indexService.newQueryShardContext(0, null, () -> 0L, null)),
-                templates.stream().map(IndexTemplateMetadata::getName).collect(toList()), metadataTransformer);
+            indexService -> resolveAndValidateAliases(request.index(), request.aliases(),
+                MetadataIndexTemplateService.resolveAliases(templates), currentState.metadata(), aliasValidator,
+                // the context is only used for validation so it's fine to pass fake values for the
+                // shard id and the current timestamp
+                xContentRegistry, indexService.newQueryShardContext(0, null, () -> 0L, null)),
+            templates.stream().map(IndexTemplateMetadata::getName).collect(toList()), metadataTransformer);
     }
 
     private ClusterState applyCreateIndexRequestWithV2Template(final ClusterState currentState,
-            final CreateIndexClusterStateUpdateRequest request, final boolean silent, final String templateName,
-            final BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer) throws Exception {
+                                                               final CreateIndexClusterStateUpdateRequest request,
+                                                               final boolean silent,
+                                                               final String templateName,
+                                                               final BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer)
+                                                                                    throws Exception {
         logger.debug("applying create index request using composable template [{}]", templateName);
 
         ComposableIndexTemplate template = currentState.getMetadata().templatesV2().get(templateName);
         if (request.dataStreamName() == null && template.getDataStreamTemplate() != null) {
-            throw new IllegalArgumentException("cannot create index with name [" + request.index() + "], because it matches with template ["
-                    + templateName + "] that creates data streams only, " + "use create data stream api instead");
+           throw new IllegalArgumentException("cannot create index with name [" + request.index() +
+               "], because it matches with template [" + templateName + "] that creates data streams only, " +
+               "use create data stream api instead");
         }
 
         final List<Map<String, Map<String, Object>>> mappings =
-                collectV2Mappings(request.mappings(), currentState, templateName, xContentRegistry, request.index());
-        final Settings aggregatedIndexSettings = aggregateIndexSettings(currentState, request,
-                MetadataIndexTemplateService.resolveSettings(currentState.metadata(), templateName), null, settings, indexScopedSettings,
-                shardLimitValidator, indexSettingProviders);
+            collectV2Mappings(request.mappings(), currentState, templateName, xContentRegistry, request.index());
+        final Settings aggregatedIndexSettings =
+            aggregateIndexSettings(currentState, request,
+                MetadataIndexTemplateService.resolveSettings(currentState.metadata(), templateName),
+                null, settings, indexScopedSettings, shardLimitValidator, indexSettingProviders);
         int routingNumShards = getIndexNumberOfRoutingShards(aggregatedIndexSettings, null);
         IndexMetadata tmpImd = buildAndValidateTemporaryIndexMetadata(currentState, aggregatedIndexSettings, request, routingNumShards);
 
         return applyCreateIndexWithTemporaryService(currentState, request, silent, null, tmpImd, mappings,
-                indexService -> resolveAndValidateAliases(request.index(), request.aliases(),
-                        MetadataIndexTemplateService.resolveAliases(currentState.metadata(), templateName), currentState.metadata(),
-                        aliasValidator,
-                        // the context is only used for validation so it's fine to pass fake values for the
-                        // shard id and the current timestamp
-                        xContentRegistry, indexService.newQueryShardContext(0, null, () -> 0L, null)),
-                Collections.singletonList(templateName), metadataTransformer);
+            indexService -> resolveAndValidateAliases(request.index(), request.aliases(),
+                MetadataIndexTemplateService.resolveAliases(currentState.metadata(), templateName), currentState.metadata(), aliasValidator,
+                // the context is only used for validation so it's fine to pass fake values for the
+                // shard id and the current timestamp
+                xContentRegistry, indexService.newQueryShardContext(0, null, () -> 0L, null)),
+            Collections.singletonList(templateName), metadataTransformer);
     }
 
     public static List<Map<String, Map<String, Object>>> collectV2Mappings(final Map<String, String> requestMappings,
-            final ClusterState currentState, final String templateName, final NamedXContentRegistry xContentRegistry,
-            final String indexName) throws Exception {
+                                                                           final ClusterState currentState,
+                                                                           final String templateName,
+                                                                           final NamedXContentRegistry xContentRegistry,
+                                                              final String indexName) throws Exception {
         List<Map<String, Map<String, Object>>> result = new ArrayList<>();
 
-        List<CompressedXContent> templateMappings = MetadataIndexTemplateService.collectMappings(currentState, templateName, indexName);
+        List<CompressedXContent> templateMappings =
+            MetadataIndexTemplateService.collectMappings(currentState, templateName, indexName);
         for (CompressedXContent templateMapping : templateMappings) {
             Map<String, Object> parsedTemplateMapping = MapperService.parseMapping(xContentRegistry, templateMapping.string());
             result.add(singletonMap(MapperService.SINGLE_MAPPING_NAME, parsedTemplateMapping));
@@ -533,29 +557,31 @@ public class MetadataCreateIndexService {
         }
         return result;
     }
-
     private ClusterState applyCreateIndexRequestWithExistingMetadata(final ClusterState currentState,
-            final CreateIndexClusterStateUpdateRequest request, final boolean silent, final IndexMetadata sourceMetadata,
-            final BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer) throws Exception {
+                                                                     final CreateIndexClusterStateUpdateRequest request,
+                                                                     final boolean silent,
+                                                                     final IndexMetadata sourceMetadata,
+                                                                     final BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer)
+                                                                                            throws Exception {
         logger.info("applying create index request using existing index [{}] metadata", sourceMetadata.getIndex().getName());
 
         if (request.mappings().size() > 0) {
-            throw new IllegalArgumentException("mappings are not allowed when creating an index from a source index, "
-                    + "all mappings are copied from the source index");
+            throw new IllegalArgumentException("mappings are not allowed when creating an index from a source index, " +
+                "all mappings are copied from the source index");
         }
 
-        final Settings aggregatedIndexSettings = aggregateIndexSettings(currentState, request, Settings.EMPTY, sourceMetadata, settings,
-                indexScopedSettings, shardLimitValidator, indexSettingProviders);
+        final Settings aggregatedIndexSettings = aggregateIndexSettings(currentState, request, Settings.EMPTY,
+            sourceMetadata, settings, indexScopedSettings, shardLimitValidator, indexSettingProviders);
         final int routingNumShards = getIndexNumberOfRoutingShards(aggregatedIndexSettings, sourceMetadata);
         IndexMetadata tmpImd = buildAndValidateTemporaryIndexMetadata(currentState, aggregatedIndexSettings, request, routingNumShards);
 
         return applyCreateIndexWithTemporaryService(currentState, request, silent, sourceMetadata, tmpImd, Collections.emptyList(),
-                indexService -> resolveAndValidateAliases(request.index(), request.aliases(), Collections.emptyList(),
-                        currentState.metadata(), aliasValidator, xContentRegistry,
-                        // the context is only used for validation so it's fine to pass fake values for the
-                        // shard id and the current timestamp
-                        indexService.newQueryShardContext(0, null, () -> 0L, null)),
-                org.codelibs.fesen.core.List.of(), metadataTransformer);
+            indexService -> resolveAndValidateAliases(request.index(), request.aliases(), Collections.emptyList(),
+                currentState.metadata(), aliasValidator, xContentRegistry,
+                // the context is only used for validation so it's fine to pass fake values for the
+                // shard id and the current timestamp
+                indexService.newQueryShardContext(0, null, () -> 0L, null)),
+            org.codelibs.fesen.core.List.of(), metadataTransformer);
     }
 
     /**
@@ -568,7 +594,8 @@ public class MetadataCreateIndexService {
      * definitions, as may result in an invalid field definition
      */
     static Map<String, Map<String, Object>> parseV1Mappings(Map<String, String> requestMappings,
-            List<Map<String, CompressedXContent>> templateMappings, NamedXContentRegistry xContentRegistry) throws Exception {
+                                                            List<Map<String, CompressedXContent>> templateMappings,
+                                                            NamedXContentRegistry xContentRegistry) throws Exception {
         Map<String, Map<String, Object>> mappings = new HashMap<>();
         for (Map.Entry<String, String> entry : requestMappings.entrySet()) {
             Map<String, Object> mapping = MapperService.parseMapping(xContentRegistry, entry.getValue());
@@ -588,24 +615,29 @@ public class MetadataCreateIndexService {
                 String mappingString = cursor.getValue().string();
                 String type = cursor.getKey();
                 if (mappings.containsKey(type)) {
-                    XContentHelper.mergeDefaults(mappings.get(type), MapperService.parseMapping(xContentRegistry, mappingString));
+                    XContentHelper.mergeDefaults(mappings.get(type),
+                        MapperService.parseMapping(xContentRegistry, mappingString));
                 } else if (mappings.size() == 1 && type.equals(MapperService.SINGLE_MAPPING_NAME)) {
                     // Typeless template with typed mapping
                     Map<String, Object> templateMapping = MapperService.parseMapping(xContentRegistry, mappingString);
                     assert templateMapping.size() == 1 : templateMapping;
-                    assert type.equals(templateMapping.keySet().iterator().next()) : type + " != " + templateMapping;
+                    assert type.equals(templateMapping.keySet().iterator().next()) :
+                        type + " != " + templateMapping;
                     Map.Entry<String, Map<String, Object>> mappingEntry = mappings.entrySet().iterator().next();
-                    templateMapping = singletonMap(mappingEntry.getKey(), // reuse type name from the mapping
-                            templateMapping.values().iterator().next()); // but actual mappings from the template
+                    templateMapping = singletonMap(
+                        mappingEntry.getKey(),                       // reuse type name from the mapping
+                        templateMapping.values().iterator().next()); // but actual mappings from the template
                     XContentHelper.mergeDefaults(mappingEntry.getValue(), templateMapping);
                 } else if (tMapping.size() == 1 && mappings.containsKey(MapperService.SINGLE_MAPPING_NAME)) {
                     // Typed template with typeless mapping
                     Map<String, Object> templateMapping = MapperService.parseMapping(xContentRegistry, mappingString);
                     assert templateMapping.size() == 1 : templateMapping;
-                    assert type.equals(templateMapping.keySet().iterator().next()) : type + " != " + templateMapping;
+                    assert type.equals(templateMapping.keySet().iterator().next()) :
+                        type + " != " + templateMapping;
                     Map<String, Object> mapping = mappings.get(MapperService.SINGLE_MAPPING_NAME);
-                    templateMapping = singletonMap(MapperService.SINGLE_MAPPING_NAME, // make template mapping typeless
-                            templateMapping.values().iterator().next());
+                    templateMapping = singletonMap(
+                        MapperService.SINGLE_MAPPING_NAME,           // make template mapping typeless
+                        templateMapping.values().iterator().next());
                     XContentHelper.mergeDefaults(mapping, templateMapping);
                 } else {
                     mappings.put(type, MapperService.parseMapping(xContentRegistry, mappingString));
@@ -626,9 +658,9 @@ public class MetadataCreateIndexService {
      * @return the aggregated settings for the new index
      */
     static Settings aggregateIndexSettings(ClusterState currentState, CreateIndexClusterStateUpdateRequest request,
-            Settings combinedTemplateSettings, @Nullable IndexMetadata sourceMetadata, Settings settings,
-            IndexScopedSettings indexScopedSettings, ShardLimitValidator shardLimitValidator,
-            Set<IndexSettingProvider> indexSettingProviders) {
+                                           Settings combinedTemplateSettings, @Nullable IndexMetadata sourceMetadata, Settings settings,
+                                           IndexScopedSettings indexScopedSettings, ShardLimitValidator shardLimitValidator,
+                                           Set<IndexSettingProvider> indexSettingProviders) {
         // Create builders for the template and request settings. We transform these into builders
         // because we may want settings to be "removed" from these prior to being set on the new
         // index (see more comments below)
@@ -638,14 +670,17 @@ public class MetadataCreateIndexService {
         final Settings.Builder indexSettingsBuilder = Settings.builder();
         if (sourceMetadata == null) {
             final Settings.Builder additionalIndexSettings = Settings.builder();
-            final Settings templateAndRequestSettings = Settings.builder().put(combinedTemplateSettings).put(request.settings()).build();
+            final Settings templateAndRequestSettings = Settings.builder()
+                .put(combinedTemplateSettings)
+                .put(request.settings())
+                .build();
 
             final boolean isDataStreamIndex = request.dataStreamName() != null;
             // Loop through all the explicit index setting providers, adding them to the
             // additionalIndexSettings map
             for (IndexSettingProvider provider : indexSettingProviders) {
-                additionalIndexSettings
-                        .put(provider.getAdditionalIndexSettings(request.index(), isDataStreamIndex, templateAndRequestSettings));
+                additionalIndexSettings.put(provider.getAdditionalIndexSettings(request.index(),
+                    isDataStreamIndex, templateAndRequestSettings));
             }
 
             // For all the explicit settings, we go through the template and request level settings
@@ -660,14 +695,14 @@ public class MetadataCreateIndexService {
             // value).
             for (String explicitSetting : additionalIndexSettings.keys()) {
                 if (templateSettings.keys().contains(explicitSetting) && templateSettings.get(explicitSetting) == null) {
-                    logger.debug("removing default [{}] setting as it in set to null in a template for [{}] creation", explicitSetting,
-                            request.index());
+                    logger.debug("removing default [{}] setting as it in set to null in a template for [{}] creation",
+                        explicitSetting, request.index());
                     additionalIndexSettings.remove(explicitSetting);
                     templateSettings.remove(explicitSetting);
                 }
                 if (requestSettings.keys().contains(explicitSetting) && requestSettings.get(explicitSetting) == null) {
-                    logger.debug("removing default [{}] setting as it in set to null in the request for [{}] creation", explicitSetting,
-                            request.index());
+                    logger.debug("removing default [{}] setting as it in set to null in the request for [{}] creation",
+                        explicitSetting, request.index());
                     additionalIndexSettings.remove(explicitSetting);
                     requestSettings.remove(explicitSetting);
                 }
@@ -712,8 +747,14 @@ public class MetadataCreateIndexService {
 
         if (sourceMetadata != null) {
             assert request.resizeType() != null;
-            prepareResizeIndexSettings(currentState, indexSettingsBuilder, request.recoverFrom(), request.index(), request.resizeType(),
-                    request.copySettings(), indexScopedSettings);
+            prepareResizeIndexSettings(
+                currentState,
+                indexSettingsBuilder,
+                request.recoverFrom(),
+                request.index(),
+                request.resizeType(),
+                request.copySettings(),
+                indexScopedSettings);
         }
 
         Settings indexSettings = indexSettingsBuilder.build();
@@ -724,8 +765,8 @@ public class MetadataCreateIndexService {
         shardLimitValidator.validateShardLimit(indexSettings, currentState);
         if (indexSettings.getAsBoolean(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true) == false) {
             DEPRECATION_LOGGER.deprecate("soft_deletes_disabled",
-                    "Creating indices with soft-deletes disabled is deprecated and will be removed in future Fesen versions. "
-                            + "Please do not specify value for setting [index.soft_deletes.enabled] of index [" + request.index() + "].");
+                "Creating indices with soft-deletes disabled is deprecated and will be removed in future Fesen versions. " +
+                    "Please do not specify value for setting [index.soft_deletes.enabled] of index [" + request.index() + "].");
         }
         validateTranslogRetentionSettings(indexSettings);
         return indexSettings;
@@ -733,10 +774,10 @@ public class MetadataCreateIndexService {
 
     static int getNumberOfShards(final Settings.Builder indexSettingsBuilder) {
         // TODO: this logic can be removed when the current major version is 8
-        assert Version.CURRENT.major < 9;
+        assert Version.CURRENT.major == 7;
         final int numberOfShards;
         final Version indexVersionCreated =
-                Version.fromId(Integer.parseInt(indexSettingsBuilder.get(IndexMetadata.SETTING_INDEX_VERSION_CREATED.getKey())));
+            Version.fromId(Integer.parseInt(indexSettingsBuilder.get(IndexMetadata.SETTING_INDEX_VERSION_CREATED.getKey())));
         if (indexVersionCreated.before(Version.V_7_0_0)) {
             numberOfShards = 5;
         } else {
@@ -763,8 +804,8 @@ public class MetadataCreateIndexService {
                 routingNumShards = calculateNumRoutingShards(numTargetShards, indexVersionCreated);
             }
         } else {
-            assert IndexMetadata.INDEX_NUMBER_OF_ROUTING_SHARDS_SETTING
-                    .exists(indexSettings) == false : "index.number_of_routing_shards should not be present on the target index on resize";
+            assert IndexMetadata.INDEX_NUMBER_OF_ROUTING_SHARDS_SETTING.exists(indexSettings) == false
+                : "index.number_of_routing_shards should not be present on the target index on resize";
             routingNumShards = sourceMetadata.getRoutingNumShards();
         }
         return routingNumShards;
@@ -781,16 +822,18 @@ public class MetadataCreateIndexService {
      * the ones inherited from the templates
      */
     public static List<AliasMetadata> resolveAndValidateAliases(String index, Set<Alias> aliases,
-            List<Map<String, AliasMetadata>> templateAliases, Metadata metadata, AliasValidator aliasValidator,
-            NamedXContentRegistry xContentRegistry, QueryShardContext queryShardContext) {
+                                                                List<Map<String, AliasMetadata>> templateAliases, Metadata metadata,
+                                                                AliasValidator aliasValidator, NamedXContentRegistry xContentRegistry,
+                                                                QueryShardContext queryShardContext) {
         List<AliasMetadata> resolvedAliases = new ArrayList<>();
         for (Alias alias : aliases) {
             aliasValidator.validateAlias(alias, index, metadata);
             if (Strings.hasLength(alias.filter())) {
                 aliasValidator.validateAliasFilter(alias.name(), alias.filter(), queryShardContext, xContentRegistry);
             }
-            AliasMetadata aliasMetadata = AliasMetadata.builder(alias.name()).filter(alias.filter()).indexRouting(alias.indexRouting())
-                    .searchRouting(alias.searchRouting()).writeIndex(alias.writeIndex()).isHidden(alias.isHidden()).build();
+            AliasMetadata aliasMetadata = AliasMetadata.builder(alias.name()).filter(alias.filter())
+                .indexRouting(alias.indexRouting()).searchRouting(alias.searchRouting()).writeIndex(alias.writeIndex())
+                .isHidden(alias.isHidden()).build();
             resolvedAliases.add(aliasMetadata);
         }
 
@@ -818,8 +861,8 @@ public class MetadataCreateIndexService {
 
                 aliasValidator.validateAliasMetadata(aliasMetadata, index, metadata);
                 if (aliasMetadata.filter() != null) {
-                    aliasValidator.validateAliasFilter(aliasMetadata.alias(), aliasMetadata.filter().uncompressed(), queryShardContext,
-                            xContentRegistry);
+                    aliasValidator.validateAliasFilter(aliasMetadata.alias(), aliasMetadata.filter().uncompressed(),
+                        queryShardContext, xContentRegistry);
                 }
                 templatesAliases.put(aliasMetadata.alias(), aliasMetadata);
                 resolvedAliases.add((aliasMetadata));
@@ -833,9 +876,10 @@ public class MetadataCreateIndexService {
      * table based on the live nodes.
      */
     static ClusterState clusterStateCreateIndex(ClusterState currentState, Set<ClusterBlock> clusterBlocks, IndexMetadata indexMetadata,
-            BiFunction<ClusterState, String, ClusterState> rerouteRoutingTable,
-            BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer) {
-        Metadata.Builder builder = Metadata.builder(currentState.metadata()).put(indexMetadata, false);
+                                                BiFunction<ClusterState, String, ClusterState> rerouteRoutingTable,
+                                                BiConsumer<Metadata.Builder, IndexMetadata> metadataTransformer) {
+        Metadata.Builder builder = Metadata.builder(currentState.metadata())
+            .put(indexMetadata, false);
         if (metadataTransformer != null) {
             metadataTransformer.accept(builder, indexMetadata);
         }
@@ -847,15 +891,16 @@ public class MetadataCreateIndexService {
 
         ClusterState updatedState = ClusterState.builder(currentState).blocks(blocks).metadata(newMetadata).build();
 
-        RoutingTable.Builder routingTableBuilder =
-                RoutingTable.builder(updatedState.routingTable()).addAsNew(updatedState.metadata().index(indexName));
+        RoutingTable.Builder routingTableBuilder = RoutingTable.builder(updatedState.routingTable())
+            .addAsNew(updatedState.metadata().index(indexName));
         updatedState = ClusterState.builder(updatedState).routingTable(routingTableBuilder.build()).build();
         return rerouteRoutingTable.apply(updatedState, "index [" + indexName + "] created");
     }
 
-    static IndexMetadata buildIndexMetadata(String indexName, List<AliasMetadata> aliases, Supplier<DocumentMapper> documentMapperSupplier,
-            Supplier<DocumentMapper> defaultDocumentMapperSupplier, Settings indexSettings, int routingNumShards,
-            @Nullable IndexMetadata sourceMetadata, boolean isSystem) {
+    static IndexMetadata buildIndexMetadata(String indexName, List<AliasMetadata> aliases,
+                                            Supplier<DocumentMapper> documentMapperSupplier,
+                                            Supplier<DocumentMapper> defaultDocumentMapperSupplier, Settings indexSettings,
+                                            int routingNumShards, @Nullable IndexMetadata sourceMetadata, boolean isSystem) {
         IndexMetadata.Builder indexMetadataBuilder = createIndexMetadataBuilder(indexName, sourceMetadata, indexSettings, routingNumShards);
         indexMetadataBuilder.system(isSystem);
         // now, update the mappings with the actual source
@@ -886,7 +931,7 @@ public class MetadataCreateIndexService {
      * created index needs to be gte than the maximum term in the source index).
      */
     private static IndexMetadata.Builder createIndexMetadataBuilder(String indexName, @Nullable IndexMetadata sourceMetadata,
-            Settings indexSettings, int routingNumShards) {
+                                                                    Settings indexSettings, int routingNumShards) {
         final IndexMetadata.Builder builder = IndexMetadata.builder(indexName);
         builder.setRoutingNumShards(routingNumShards);
         builder.settings(indexSettings);
@@ -898,7 +943,11 @@ public class MetadataCreateIndexService {
              * document-level semantics regarding sequence numbers in the shrunken index.
              */
             final long primaryTerm =
-                    IntStream.range(0, sourceMetadata.getNumberOfShards()).mapToLong(sourceMetadata::primaryTerm).max().getAsLong();
+                IntStream
+                    .range(0, sourceMetadata.getNumberOfShards())
+                    .mapToLong(sourceMetadata::primaryTerm)
+                    .max()
+                    .getAsLong();
             for (int shardId = 0; shardId < builder.numberOfShards(); shardId++) {
                 builder.primaryTerm(shardId, primaryTerm);
             }
@@ -916,8 +965,10 @@ public class MetadataCreateIndexService {
         return blocksBuilder;
     }
 
-    private static void updateIndexMappingsAndBuildSortOrder(IndexService indexService, CreateIndexClusterStateUpdateRequest request,
-            List<Map<String, Map<String, Object>>> mappings, @Nullable IndexMetadata sourceMetadata) throws IOException {
+    private static void updateIndexMappingsAndBuildSortOrder(IndexService indexService,
+                                                             CreateIndexClusterStateUpdateRequest request,
+                                                             List<Map<String, Map<String, Object>>> mappings,
+                                                             @Nullable IndexMetadata sourceMetadata) throws IOException {
         MapperService mapperService = indexService.mapperService();
         for (Map<String, Map<String, Object>> mapping : mappings) {
             if (!mapping.isEmpty()) {
@@ -944,8 +995,9 @@ public class MetadataCreateIndexService {
             waitForActiveShards = indexMetadata.getWaitForActiveShards();
         }
         if (waitForActiveShards.validate(indexMetadata.getNumberOfReplicas()) == false) {
-            throw new IllegalArgumentException("invalid wait_for_active_shards[" + waitForActiveShards
-                    + "]: cannot be greater than number of shard copies [" + (indexMetadata.getNumberOfReplicas() + 1) + "]");
+            throw new IllegalArgumentException("invalid wait_for_active_shards[" + waitForActiveShards +
+                "]: cannot be greater than number of shard copies [" +
+                (indexMetadata.getNumberOfReplicas() + 1) + "]");
         }
     }
 
@@ -955,7 +1007,7 @@ public class MetadataCreateIndexService {
     }
 
     public void validateIndexSettings(String indexName, final Settings settings, final boolean forbidPrivateIndexSettings)
-            throws IndexCreationException {
+        throws IndexCreationException {
         List<String> validationErrors = getIndexSettingsValidationErrors(settings, forbidPrivateIndexSettings);
 
         if (validationErrors.isEmpty() == false) {
@@ -1000,9 +1052,10 @@ public class MetadataCreateIndexService {
             if (sharedDataPath == null) {
                 validationErrors.add("path.shared_data must be set in order to use custom data paths");
             } else {
-                Path resolvedPath = PathUtils.get(new Path[] { sharedDataPath }, customPath);
+                Path resolvedPath = PathUtils.get(new Path[]{sharedDataPath}, customPath);
                 if (resolvedPath == null) {
-                    validationErrors.add("custom path [" + customPath + "] is not a sub-path of path.shared_data [" + sharedDataPath + "]");
+                    validationErrors.add("custom path [" + customPath +
+                        "] is not a sub-path of path.shared_data [" + sharedDataPath + "]");
                 }
             }
         }
@@ -1039,7 +1092,8 @@ public class MetadataCreateIndexService {
             }
         }
         if (nodesToAllocateOn.isEmpty()) {
-            throw new IllegalStateException("index " + sourceIndex + " must have all shards allocated on the same node to shrink index");
+            throw new IllegalStateException("index " + sourceIndex +
+                " must have all shards allocated on the same node to shrink index");
         }
         return nodesToAllocateOn;
     }
@@ -1047,6 +1101,12 @@ public class MetadataCreateIndexService {
     static void validateSplitIndex(ClusterState state, String sourceIndex, String targetIndexName, Settings targetIndexSettings) {
         IndexMetadata sourceMetadata = validateResize(state, sourceIndex, targetIndexName, targetIndexSettings);
         IndexMetadata.selectSplitShard(0, sourceMetadata, IndexMetadata.INDEX_NUMBER_OF_SHARDS_SETTING.get(targetIndexSettings));
+        if (sourceMetadata.getCreationVersion().before(Version.V_6_0_0_alpha1)) {
+            // ensure we have a single type since this would make the splitting code considerably more complex
+            // and a 5.x index would not be splittable unless it has been shrunk before so rather opt out of the complexity
+            // since in 5.x we don't have a setting to artificially set the number of routing shards
+            throw new IllegalStateException("source index created version is too old to apply a split operation");
+        }
     }
 
     static void validateCloneIndex(ClusterState state, String sourceIndex, String targetIndexName, Settings targetIndexSettings) {
@@ -1065,10 +1125,10 @@ public class MetadataCreateIndexService {
 
         IndexAbstraction source = state.metadata().getIndicesLookup().get(sourceIndex);
         assert source != null;
-        if (source.getParentDataStream() != null
-                && source.getParentDataStream().getWriteIndex().getIndex().equals(sourceMetadata.getIndex())) {
+        if (source.getParentDataStream() != null &&
+            source.getParentDataStream().getWriteIndex().getIndex().equals(sourceMetadata.getIndex())) {
             throw new IllegalArgumentException(String.format(Locale.ROOT, "cannot resize the write index [%s] for data stream [%s]",
-                    sourceIndex, source.getParentDataStream().getName()));
+                sourceIndex, source.getParentDataStream().getName()));
         }
 
         // ensure index is read-only
@@ -1079,13 +1139,19 @@ public class MetadataCreateIndexService {
         if (INDEX_NUMBER_OF_SHARDS_SETTING.exists(targetIndexSettings)) {
             // this method applies all necessary checks ie. if the target shards are less than the source shards
             // of if the source shards are divisible by the number of target shards
-            IndexMetadata.getRoutingFactor(sourceMetadata.getNumberOfShards(), INDEX_NUMBER_OF_SHARDS_SETTING.get(targetIndexSettings));
+            IndexMetadata.getRoutingFactor(sourceMetadata.getNumberOfShards(),
+                INDEX_NUMBER_OF_SHARDS_SETTING.get(targetIndexSettings));
         }
         return sourceMetadata;
     }
 
-    static void prepareResizeIndexSettings(final ClusterState currentState, final Settings.Builder indexSettingsBuilder,
-            final Index resizeSourceIndex, final String resizeIntoName, final ResizeType type, final boolean copySettings,
+    static void prepareResizeIndexSettings(
+            final ClusterState currentState,
+            final Settings.Builder indexSettingsBuilder,
+            final Index resizeSourceIndex,
+            final String resizeIntoName,
+            final ResizeType type,
+            final boolean copySettings,
             final IndexScopedSettings indexScopedSettings) {
         // we use "i.r.a.initial_recovery" rather than "i.r.a.require|include" since we want the replica to allocate right away
         // once we are allocated.
@@ -1093,8 +1159,8 @@ public class MetadataCreateIndexService {
 
         final IndexMetadata sourceMetadata = currentState.metadata().index(resizeSourceIndex.getName());
         if (type == ResizeType.SHRINK) {
-            final List<String> nodesToAllocateOn =
-                    validateShrinkIndex(currentState, resizeSourceIndex.getName(), resizeIntoName, indexSettingsBuilder.build());
+            final List<String> nodesToAllocateOn = validateShrinkIndex(currentState, resizeSourceIndex.getName(),
+                resizeIntoName, indexSettingsBuilder.build());
             indexSettingsBuilder.put(initialRecoveryIdFilter, Strings.arrayToCommaDelimitedString(nodesToAllocateOn.toArray()));
         } else if (type == ResizeType.SPLIT) {
             validateSplitIndex(currentState, resizeSourceIndex.getName(), resizeIntoName, indexSettingsBuilder.build());
@@ -1124,16 +1190,19 @@ public class MetadataCreateIndexService {
             }
         } else {
             final Predicate<String> sourceSettingsPredicate =
-                    (s) -> (s.startsWith("index.similarity.") || s.startsWith("index.analysis.") || s.startsWith("index.sort.")
-                            || s.equals("index.soft_deletes.enabled")) && indexSettingsBuilder.keys().contains(s) == false;
+                    (s) -> (s.startsWith("index.similarity.") || s.startsWith("index.analysis.") ||
+                            s.startsWith("index.sort.") || s.equals("index.soft_deletes.enabled"))
+                            && indexSettingsBuilder.keys().contains(s) == false;
             builder.put(sourceMetadata.getSettings().filter(sourceSettingsPredicate));
         }
 
-        indexSettingsBuilder.put(IndexMetadata.SETTING_INDEX_VERSION_CREATED.getKey(), sourceMetadata.getCreationVersion())
-                .put(IndexMetadata.SETTING_VERSION_UPGRADED, sourceMetadata.getUpgradedVersion()).put(builder.build())
-                .put(IndexMetadata.SETTING_ROUTING_PARTITION_SIZE, sourceMetadata.getRoutingPartitionSize())
-                .put(IndexMetadata.INDEX_RESIZE_SOURCE_NAME.getKey(), resizeSourceIndex.getName())
-                .put(IndexMetadata.INDEX_RESIZE_SOURCE_UUID.getKey(), resizeSourceIndex.getUUID());
+        indexSettingsBuilder
+            .put(IndexMetadata.SETTING_INDEX_VERSION_CREATED.getKey(), sourceMetadata.getCreationVersion())
+            .put(IndexMetadata.SETTING_VERSION_UPGRADED, sourceMetadata.getUpgradedVersion())
+            .put(builder.build())
+            .put(IndexMetadata.SETTING_ROUTING_PARTITION_SIZE, sourceMetadata.getRoutingPartitionSize())
+            .put(IndexMetadata.INDEX_RESIZE_SOURCE_NAME.getKey(), resizeSourceIndex.getName())
+            .put(IndexMetadata.INDEX_RESIZE_SOURCE_UUID.getKey(), resizeSourceIndex.getUUID());
     }
 
     /**
@@ -1160,11 +1229,11 @@ public class MetadataCreateIndexService {
     }
 
     public static void validateTranslogRetentionSettings(Settings indexSettings) {
-        if (IndexSettings.INDEX_SOFT_DELETES_SETTING.get(indexSettings)
-                && (IndexSettings.INDEX_TRANSLOG_RETENTION_AGE_SETTING.exists(indexSettings)
-                        || IndexSettings.INDEX_TRANSLOG_RETENTION_SIZE_SETTING.exists(indexSettings))) {
+        if (IndexSettings.INDEX_SOFT_DELETES_SETTING.get(indexSettings) &&
+            (IndexSettings.INDEX_TRANSLOG_RETENTION_AGE_SETTING.exists(indexSettings)
+                || IndexSettings.INDEX_TRANSLOG_RETENTION_SIZE_SETTING.exists(indexSettings))) {
             DEPRECATION_LOGGER.deprecate("translog_retention", "Translog retention settings [index.translog.retention.age] "
-                    + "and [index.translog.retention.size] are deprecated and effectively ignored. They will be removed in a future version.");
+                + "and [index.translog.retention.size] are deprecated and effectively ignored. They will be removed in a future version.");
         }
     }
 }
